src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Name_CM__c</fullName>
        <formula>Account.Associated_Business__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name (CM)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type_Name_CM__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type Name (CM)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type_CM__c</fullName>
        <formula>text(Account.Associated_Business__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type (CM)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Business_Owner_Information__c</fullName>
        <label>Additional Business Owner Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Allocated_Internal_Sales_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allocated Internal Sales Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Any_Dependents__c</fullName>
        <label>No. of Dependents</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Position__c</fullName>
        <label>Business Position</label>
        <picklist>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarantor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shareholder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Civil_Litigation__c</fullName>
        <label>Civil Litigation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <description>This field stores the Client ID</description>
        <displayFormat>{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Client ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Consent_to_Search__c</fullName>
        <label>Consent to Search</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DWH_Import__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DWH Import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DWH_Last_Sync__c</fullName>
        <label>DWH Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DWH_Status__c</fullName>
        <label>DWH Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Debt_Type__c</fullName>
        <label>Debt Type</label>
        <picklist>
            <picklistValues>
                <fullName>Equipment Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overdraft</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Txt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Txt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Driver_Licence_Number__c</fullName>
        <label>Driver Licence Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECR__c</fullName>
        <description>ECR for Residency Status</description>
        <label>ACR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Education_Level__c</fullName>
        <label>Education Level</label>
        <picklist>
            <picklistValues>
                <fullName>University or Above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HKID_Card_No__c</fullName>
        <label>HKID Card No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Address_Line_2__c</fullName>
        <label>Home Address Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Address_Line_3__c</fullName>
        <label>Home Address Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Building_Name__c</fullName>
        <label>Home Building Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_City_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Home City</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Home_Sub_Region__c</field>
                <operation>equals</operation>
                <valueField>City__c.Sub_region__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Home_City__c</fullName>
        <formula>Home_City_Lookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Country__c</fullName>
        <label>Home Country</label>
        <picklist>
            <picklistValues>
                <fullName>England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_District__c</fullName>
        <label>Home District</label>
        <picklist>
            <controllingField>Home_Region__c</controllingField>
            <picklistValues>
                <fullName>Central and Western</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wan Chai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sham Shui Po</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kowloon City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kwun Tong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wong Tai Sin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yau Tsim Mong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kwai Tsing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sai Kung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sha Tin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tai Po</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tsuen Wan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuen Mun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yuen Long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caloocan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Las Pinas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Makati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malabon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandaluyong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marikina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muntinlupa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navotas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paranaque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pasay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pasig</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Floor_No__c</fullName>
        <label>Home Floor No.</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Postcode__c</fullName>
        <label>Home Postcode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Region__c</fullName>
        <label>Home Region</label>
        <picklist>
            <controllingField>Home_Country__c</controllingField>
            <picklistValues>
                <fullName>Calabarzon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Luzon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East of England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kowloon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Capital Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Territories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North-East Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North West England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yorkshire and the Humber</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Street_Name__c</fullName>
        <label>Home Street Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Street_Number__c</fullName>
        <label>Home Street Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Sub_Region__c</fullName>
        <label>Home Sub-region</label>
        <picklist>
            <controllingField>Home_Region__c</controllingField>
            <picklistValues>
                <fullName>Aberdeen City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aberdeenshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antrim and Newtownabbey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argyll and Bute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armagh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banbridge and Craigavon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bath and North East Somerset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackburn with Darwen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackpool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blaenau Gwent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bournemouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bracknell Forest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridgend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brighton and Hove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bristol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buckinghamshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caerphilly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambridgeshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carmarthenshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Causeway Coast and Glens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Bedfordshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceredigion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheshire East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheshire West and Chester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City of Edinburgh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clackmannanshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsConverted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsConverted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lending_Entity__c</fullName>
        <label>Lending Entity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De facto</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Repayment__c</fullName>
        <label>Monthly Repayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NRIC_Number__c</fullName>
        <description>NRIC Number for Singapore</description>
        <label>NRIC Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Insurance_Number__c</fullName>
        <label>National Insurance Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_ID__c</fullName>
        <description>Other ID for Residency Status</description>
        <label>Other ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outstanding_Amount__c</fullName>
        <label>Outstanding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <label>Owner Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_ID__c</fullName>
        <description>This field stores the Partner ID.</description>
        <displayFormat>PID - {000000}</displayFormat>
        <externalId>true</externalId>
        <label>Partner ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Partner_User__c</fullName>
        <formula>$Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Website_Id__c</fullName>
        <description>This field stores the Partner ID.</description>
        <displayFormat>PID - {000000}</displayFormat>
        <externalId>true</externalId>
        <label>Partner ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Passport_County_of_issues__c</fullName>
        <description>Passport county of issue for New Residency Status picklist to drive additional required data fields</description>
        <label>Passport Country of Issue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_Expiry_Date__c</fullName>
        <description>Passport Expiry Date for New Residency Status picklist to drive additional required data fields</description>
        <label>Passport Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Passport_Number__c</fullName>
        <description>Passport Number used for New Residency Status picklist to drive additional required data fields</description>
        <label>Passport Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_of_the_Company_Ownership__c</fullName>
        <label>Percentage of Ownership</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Property_Ownership__c</fullName>
        <label>Property Ownership</label>
        <picklist>
            <picklistValues>
                <fullName>Rented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living with Relative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Residency_Status__c</fullName>
        <description>New Residency Status picklist to drive additional required data fields</description>
        <label>Residency Status</label>
        <picklist>
            <picklistValues>
                <fullName>Permanent Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Permanent Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-HK Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent Resident Alien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singaporean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore Permanent Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreigner with Employment Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreigner without Employment Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citizen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sir.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Residential_Property__c</fullName>
        <label>Type of Residential Property</label>
        <picklist>
            <picklistValues>
                <fullName>Private Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOS Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_ID__c</fullName>
        <description>Valid ID for Residency Status</description>
        <label>Valid ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Was_AMP_Client_Before__c</fullName>
        <label>Was AMP Client Before</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Contact</fullName>
        <active>true</active>
        <description>Select to add a new contact</description>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner</fullName>
        <active>true</active>
        <description>Select to add a new partner</description>
        <label>Partner</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>